--- a/testimonial.html
+++ b/testimonial.html
@@ -23,7 +23,7 @@
     </header>
     <main>
         <div class="con-div">
-            <p class="con-para">Testimonials</p>
+            <p class="con-para testi-page-main-head">Testimonials</p>
         </div>
         <div class="testi-page-head">
             <h2>Our Testimonials</h2>
