--- a/treatment.html
+++ b/treatment.html
@@ -23,7 +23,7 @@
     </header>
     <main>
         <div class="con-div">
-            <p class="con-para">Treatments</p>
+            <p class="con-para treat-page-main-head">Treatments</p>
         </div>
         <div>
             <div class="treatment-main-div">
