--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
         </div>
         <div class="con-div-main">
             <div class="form-div">
-                <form name="contact" method="POST" data-netlify="true" class="form">
+                <form name="contact" action="https://formspree.io/f/xnnajnrj" method="POST" class="form">
                     <input type="text" name="name" placeholder="Enter Your Name" class="con-input" required><br>
                     <input type="number" name="phoneno." placeholder="Mobile Number" class="con-input" required><br>
                     <input type="email" name="email" placeholder="E-mail" class="con-input"><br>
