--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Dentists Jain Dental Clinic">
+    <meta name="google-site-verification" content="Rv4nVe8T4plNK0XvlcSWhEqNFonXpZ6joHAw672b5u0" />
     <title>Jain Dental Clinic</title>
     <link rel="stylesheet" href="index.css">
 </head>
